--- a/Lifestyle/index.html
+++ b/Lifestyle/index.html
@@ -3,12 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <title>LIFESTYLE</title>
+    <link rel="stylesheet" href="./css/main.css"/>
+    <link rel="stylesheet" href="./css/reset.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
   </head>
 
   <body>
-    <header>
+    <header id="header-primary">
       <div class="container">
-        <nav>
+        <nav class="navigation">
           <a href="">LIFESTYLE</a>
           <a href="">PHOTODIARY</a>
           <a href="">MUSIC</a>
@@ -22,7 +31,7 @@
           <div class="flex-container wrapper-cards">
             <div class="card">
               <div class="wrapper-image">
-                <img src="../assets/img/post-1.png" alt="post-1" />
+                <img src="./assets/img/post-1.png" alt="post-1" />
               </div>
               <div class="wrapper-category">
                 <a href="">LIFESTYLE</a>
@@ -44,7 +53,7 @@
             </div>
             <div class="card">
               <div class="wrapper-image">
-                <img src="assets/img/post-2.png" alt="post-2" />
+                <img src="./assets/img/post-2.png" alt="post-2" />
               </div>
               <div class="wrapper-category">
                 <a href="">LIFESTYLE</a>
@@ -66,7 +75,7 @@
             </div>
             <div class="card">
               <div class="wrapper-image">
-                <img src="../assets/img/post-3.png" alt="post-3" />
+                <img src="./assets/img/post-3.png" alt="post-3" />
               </div>
               <div class="wrapper-category">
                 <a href="">LIFESTYLE</a>
@@ -89,7 +98,7 @@
             </div>
             <div class="card">
               <div class="wrapper-image">
-                <img src="../assets/img/post-4.png" alt="post-4" />
+                <img src="./assets/img/post-4.png" alt="post-4" />
               </div>
               <div class="wrapper-category">
                 <a href="">LIFESTYLE</a>
